<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_VariableData" Id="{abd12dce-2e83-4fd7-b7ea-3f3c329a41ae}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// Encoder Counter:
	iEncoderRotationCounterLeft			: INT;
	iEncoderRotationCounterRight		: INT;
	
	// Angles:
	nStartAngleOfCrack1 				: LREAL;
	nStartAngleOfCrack2					: LREAL;
	
	nFinalAngleOfCrack1 				: LREAL;
	nFinalAngleOfCrack2					: LREAL;
	
	//Angles for cracks in pulses:
	nStartAngleOfCrackInPulse1 			: INT;
	nStartAngleOfCrackInPulse2			: INT;
	
	nFinalAngleOfCrackInPulse1			: INT;
	nFinalAngleOfCrackInPulse2			: INT;
	
	//Homing angles in pulses:
	nHomingAngleInPulseLeft 			: INT;
	nHomingAngleInPulseRight 			: INT;
	
	//Start configuration in pulses:
	nStartConfigAngleInPulseLeft		: INT;
	nStartConfigAngleInPulseRight		: INT;
	
	//Start configuration angles:
	nStartConfigAngleLeft 				: LREAL;
	nStartConfigAngleRight 				: LREAL;
	
	//Homing angles in radian:
	nHomingAngleLeft					: LREAL;
	nHomingAngleRight					: LREAL;
	
	
	nStartConfigInPulseLeft: INT;
	nStartConfigInPulseRight: INT;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>